<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/menu"
    tools:menu="@menu/logout">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/toolBar"
        android:layout_alignParentTop="true"
...
            android:id="@+id/Recycle_cate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/themMoi"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
...
