...
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:id="@+id/editButton"
            android:text="Sửa"
            android:background="@color/gradient_end_color"
            android:gravity="center"
            />
        <TextView
        android:layout_width="70dp"
...
